; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eapol_supp/extr_eapol_supp_sm.c_eapol_sm_notify_portControl.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eapol_supp/extr_eapol_supp_sm.c_eapol_sm_notify_portControl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eapol_sm = type { i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"EAPOL: External notification - portControl=%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eapol_sm_notify_portControl(%struct.eapol_sm* %0, i32 %1) #0 {
  %3 = alloca %struct.eapol_sm*, align 8
  %4 = alloca i32, align 4
  store %struct.eapol_sm* %0, %struct.eapol_sm** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.eapol_sm*, %struct.eapol_sm** %3, align 8
  %6 = icmp eq %struct.eapol_sm* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %18

8:                                                ; preds = %2
  %9 = load i32, i32* @MSG_DEBUG, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @eapol_port_control(i32 %10)
  %12 = call i32 @wpa_printf(i32 %9, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.eapol_sm*, %struct.eapol_sm** %3, align 8
  %15 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct.eapol_sm*, %struct.eapol_sm** %3, align 8
  %17 = call i32 @eapol_sm_step(%struct.eapol_sm* %16)
  br label %18

18:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @wpa_printf(i32, i8*, i32) #1

declare dso_local i32 @eapol_port_control(i32) #1

declare dso_local i32 @eapol_sm_step(%struct.eapol_sm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
